@@ -1,3 +1,11 @@
+2011-04-27 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* sdas/linksrc/aslink.h,
+	* sdas/linksrc/lkmain.c(intsiz, doparse, parse, main, usage): synced with
+	  ASxxxx 5, changed command line flags
+	* src/hc08/main.c,
+	* src/SDCCmain.c: use new flags
+
 2011-04-25 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* sdas/linksrc/lkbank.c: new, added
